# easyvideo

./: CMakeLists.txt  README.md
demo/: pushRTSP.cpp
include/easyvideo/: push.h  videoCodecType.h  videoDecoder.h  videoEncoder.h  videoServer.h  videoWriter.h
include/easyvideo/opencv/: baseCapture.h  capture.h  jpeg2rgb.h  jpegCapture.h  stream.h  streamCapture.h  yuyv2bgr.h  yuyvCapture.h
include/easyvideo/utils/: resize.h  undistort.h
include/easyvideo/utils/sensor/: info.h
include/pylike/: argparse.h  argparser.h  datetime.h  logger.h  logger1.h  logger_old.h  np.h  os.h  str.h  tabulate.h
src/: capture.cpp  jpegCapture.cpp  jpegutils.cpp  push.cpp  stream.cpp  streamCapture.cpp  videoDecoder.cpp  videoDecoder_hw.cpp  videoEncoder.cpp  videoWriter.cpp  yuyvCapture.cpp
src/platform/ffmpeg/: ffmpeg_videoDecoder.cpp
src/platform/rockchip/: rkmpp_videoDecoder.cpp
